Bug 491825 - Remove new Boolean and other primitive wrappers
The use of `new Boolean` results in additional Boolean instances
generated on the heap, along with `new Integer` and `new Short`

Replace these with implicitly autoboxed versions instead,
or remove their use altogether.

Change-Id: Ie358c8385c278472f3b86851f6fc219007bb9b5c
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>