@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2006 QNX Software Systems and others.
+ * Copyright (c) 2000, 2016 QNX Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -46,7 +46,7 @@ public class Util {
 	}
 
 	public static int indexOf(String line, char c) {
-		return indexOf(line, new Character(c).toString());
+		return indexOf(line, Character.valueOf(c).toString());
 	}
 
 	/**
