@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2003, 2013 IBM Corporation and others.
+ *  Copyright (c) 2003, 2016 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -50,7 +50,7 @@ import org.osgi.framework.Version;
 
 public class Option extends BuildObject implements IOption, IBuildPropertiesRestriction {
 	// Static default return values
-	public static final String EMPTY_STRING = new String().intern();
+	public static final String EMPTY_STRING = "";
 	public static final String[] EMPTY_STRING_ARRAY = new String[0];
 	public static final OptionStringValue[] EMPTY_LV_ARRAY = new OptionStringValue[0];
 
@@ -199,28 +199,28 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 
 		//  Copy the remaining attributes
 		if (option.unusedChildren != null) {
-			unusedChildren = new String(option.unusedChildren);
+			unusedChildren = option.unusedChildren;
 		}
 		if (option.isAbstract != null) {
-			isAbstract = new Boolean(option.isAbstract.booleanValue());
+			isAbstract = option.isAbstract;
 		}
 		if (option.command != null) {
-			command = new String(option.command);
+			command = option.command;
 		}
 		if (option.commandFalse != null) {
-			commandFalse = new String(option.commandFalse);
+			commandFalse = option.commandFalse;
 		}
 		if (option.isForScannerDiscovery != null) {
-			isForScannerDiscovery = new Boolean(option.isForScannerDiscovery.booleanValue());
+			isForScannerDiscovery = option.isForScannerDiscovery;
 		}
 		if (option.tip != null) {
-			tip = new String(option.tip);
+			tip = option.tip;
 		}
 		if (option.contextId != null) {
-			contextId = new String(option.contextId);
+			contextId = option.contextId;
 		}
 		if (option.categoryId != null) {
-			categoryId = new String(option.categoryId);
+			categoryId = option.categoryId;
 		}
 		if (option.builtIns != null) {
 			builtIns = new ArrayList<OptionStringValue>(option.builtIns);
@@ -247,28 +247,27 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 		}
 
 		if (option.valueType != null) {
-			valueType = new Integer(option.valueType.intValue());
+			valueType = option.valueType;
 		}
-		Integer vType = null;
 		try {
-			vType = new Integer(option.getValueType());
-			switch (vType.intValue()) {
+			int vType = option.getValueType();
+			switch (vType) {
 			case BOOLEAN:
 				if (option.value != null) {
-					value = new Boolean(((Boolean)option.value).booleanValue());
+					value = (Boolean)option.value;
 				}
 				if (option.defaultValue != null) {
-					defaultValue = new Boolean(((Boolean)option.defaultValue).booleanValue());
+					defaultValue = (Boolean)option.defaultValue;
 				}
 				break;
 			case STRING:
 			case ENUMERATED:
 			case TREE:
 				if (option.value != null) {
-					value = new String((String)option.value);
+					value = (String)option.value;
 				}
 				if (option.defaultValue != null) {
-					defaultValue = new String((String)option.defaultValue);
+					defaultValue = (String)option.defaultValue;
 				}
 				break;
 			case STRING_LIST:
@@ -364,7 +363,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 		// isAbstract
 		String isAbs = element.getAttribute(IProjectType.IS_ABSTRACT);
 		if (isAbs != null){
-			isAbstract = new Boolean("true".equals(isAbs)); //$NON-NLS-1$
+			isAbstract = "true".equals(isAbs); //$NON-NLS-1$
 		}
 
 		// Get the command defined for the option
@@ -382,7 +381,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 		// isForScannerDiscovery
 		String isForSD = element.getAttribute(USE_BY_SCANNER_DISCOVERY);
 		if (isForSD != null){
-			isForScannerDiscovery = new Boolean("true".equals(isForSD)); //$NON-NLS-1$
+			isForScannerDiscovery = "true".equals(isForSD); //$NON-NLS-1$
 		}
 
 		// Get the tooltip for the option
@@ -506,7 +505,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 		if (element.getAttribute(IProjectType.IS_ABSTRACT) != null) {
 			String isAbs = element.getAttribute(IProjectType.IS_ABSTRACT);
 			if (isAbs != null){
-				isAbstract = new Boolean("true".equals(isAbs)); //$NON-NLS-1$
+				isAbstract = "true".equals(isAbs); //$NON-NLS-1$
 			}
 		}
 
@@ -524,7 +523,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 		if (element.getAttribute(USE_BY_SCANNER_DISCOVERY) != null) {
 			String isForSD = element.getAttribute(USE_BY_SCANNER_DISCOVERY);
 			if (isForSD != null){
-				isForScannerDiscovery = new Boolean("true".equals(isForSD)); //$NON-NLS-1$
+				isForScannerDiscovery = "true".equals(isForSD); //$NON-NLS-1$
 			}
 		}
 
@@ -551,10 +550,10 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 			case BOOLEAN:
 				// Convert the string to a boolean
 				if (element.getAttribute(VALUE) != null) {
-					value = new Boolean(element.getAttribute(VALUE));
+					value = Boolean.valueOf(element.getAttribute(VALUE));
 				}
 				if (element.getAttribute(DEFAULT_VALUE) != null) {
-					defaultValue = new Boolean(element.getAttribute(DEFAULT_VALUE));
+					defaultValue = Boolean.valueOf(element.getAttribute(DEFAULT_VALUE));
 				}
 				break;
 			case STRING:
@@ -596,7 +595,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 						}
 						getNameMap().put(optId, SafeStringInterner.safeIntern(configElement.getAttribute(NAME)));
 						if (configElement.getAttribute(IS_DEFAULT) != null) {
-							Boolean isDefault = new Boolean(configElement.getAttribute(IS_DEFAULT));
+							Boolean isDefault = Boolean.valueOf(configElement.getAttribute(IS_DEFAULT));
 							if (isDefault.booleanValue()) {
 								defaultValue = optId;
 							}
@@ -1277,7 +1276,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 	@Override
 	public boolean isForScannerDiscovery() {
 		if (isForScannerDiscovery == null) {
-			isForScannerDiscovery = new Boolean(superClass != null && superClass.isForScannerDiscovery());
+			isForScannerDiscovery = superClass != null && superClass.isForScannerDiscovery();
 		}
 		return isForScannerDiscovery;
 	}
@@ -1601,7 +1600,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 				}
 				switch (valType) {
 				case BOOLEAN:
-					val = new Boolean(false);
+					val = Boolean.FALSE;
 					break;
 				case STRING:
 				case TREE:
@@ -1662,7 +1661,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 				}
 				switch (valType) {
 				case BOOLEAN:
-					val = new Boolean(false);
+					val = Boolean.FALSE;
 					break;
 				case STRING:
 				case TREE:
@@ -1906,7 +1905,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 	@Override
 	public void setValue(boolean value) throws BuildException {
 		if (/*!isExtensionElement() && */getValueType() == BOOLEAN){
-			this.value = new Boolean(value);
+			this.value = value;
 		} else {
 			throw new BuildException(ManagedMakeMessages.getResourceString("Option.error.bad_value_type")); //$NON-NLS-1$
 		}
@@ -2196,11 +2195,11 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 					// Convert the string to a boolean
 					String val = element.getAttribute(VALUE);
 					if (val != null) {
-						value = new Boolean(val);
+						value = Boolean.valueOf(val);
 					}
 					val = element.getAttribute(DEFAULT_VALUE);
 					if (val != null) {
-						defaultValue = new Boolean(val);
+						defaultValue = Boolean.valueOf(val);
 					}
 					break;
 				case STRING:
@@ -2226,7 +2225,7 @@ public class Option extends BuildObject implements IOption, IBuildPropertiesRest
 						applicableValuesList.add(optId);
 						getCommandMap().put(optId, SafeStringInterner.safeIntern(enumElements[i].getAttribute(COMMAND)));
 						getNameMap().put(optId, SafeStringInterner.safeIntern(enumElements[i].getAttribute(NAME)));
-						Boolean isDefault = new Boolean(enumElements[i].getAttribute(IS_DEFAULT));
+						Boolean isDefault = Boolean.valueOf(enumElements[i].getAttribute(IS_DEFAULT));
 						if (isDefault.booleanValue()) {
 							defaultValue = optId;
 						}
