@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2014 Symbian Software Systems and others.
+ * Copyright (c) 2007, 2016 Symbian Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -404,7 +404,7 @@ public final class IndexProviderManager implements IElementChangedListener {
 		if (!provisionMap.containsKey(key)) {
 			try {
 				ICProject cproject= CoreModel.getDefault().create(project);
-				provisionMap.put(key, new Boolean(provider.providesFor(cproject)));
+				provisionMap.put(key, Boolean.valueOf(provider.providesFor(cproject)));
 			} catch (CoreException e) {
 				CCorePlugin.log(e);
 				provisionMap.put(key, Boolean.FALSE);
